# seismocorr

./: README.md  pyproject.toml
examples/: demo_traditional_inversion.py
examples/scripts/: demo_beamforming.py  demo_cluster_filter.py  demo_svd_wf.py  demo_viz.py  do_spfi.py  do_spfi_1d.py  plot_1d_results_simple.py  plot_dispersion_methods.py  stacked_cc_result.npz  stacking_bench.py
examples/test_dipser_picker_data/: ds.h5
seismocorr/config/: default.py
seismocorr/core/: assumption.py  correlation.py  correlation_2dtest.py  dispersion_forward.py  stacking.py
seismocorr/core/__pycache__/: correlation._apply_preprocessing-161.py310.1.nbc  correlation._apply_preprocessing-161.py310.nbi  correlation._apply_preprocessing-162.py310.1.nbc  correlation._apply_preprocessing-162.py310.nbi  correlation._apply_preprocessing-174.py310.1.nbc  correlation._apply_preprocessing-174.py310.nbi  correlation._as_float_array-414.py310.1.nbc  correlation._as_float_array-414.py310.2.nbc  correlation._as_float_array-414.py310.3.nbc  correlation._as_float_array-414.py310.nbi  correlation._as_float_array-424.py310.1.nbc  correlation._as_float_array-424.py310.nbi  correlation._as_float_array-425.py310.1.nbc  correlation._as_float_array-425.py310.nbi  correlation._as_float_array-426.py310.1.nbc  correlation._as_float_array-426.py310.nbi  (+43 more)
seismocorr/core/spfi/: spfi.py  (+3 more)
seismocorr/plugins/: disper_picker.py  fj_helper_func.py
seismocorr/preprocessing/: das_process.py  freq_norm.py  freq_norm2d.py  normal_func.py  normal_func2d.py  normalization_utils.py  time_norm.py  time_norm2d.py
(+98 files in other folders)
